@@ -5,6 +5,31 @@
 
 using namespace Rcpp;
 
+// mergePeaks
+Rcpp::DataFrame mergePeaks(Rcpp::DataFrame data, Rcpp::NumericVector vMaxGap);
+RcppExport SEXP DiffBind_mergePeaks(SEXP dataSEXP, SEXP vMaxGapSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject __result;
+    Rcpp::RNGScope __rngScope;
+    Rcpp::traits::input_parameter< Rcpp::DataFrame >::type data(dataSEXP);
+    Rcpp::traits::input_parameter< Rcpp::NumericVector >::type vMaxGap(vMaxGapSEXP);
+    __result = Rcpp::wrap(mergePeaks(data, vMaxGap));
+    return __result;
+END_RCPP
+}
+// mergeScores
+Rcpp::List mergeScores(Rcpp::DataFrame sMerged, Rcpp::NumericVector sScore, Rcpp::DataFrame sPeaks);
+RcppExport SEXP DiffBind_mergeScores(SEXP sMergedSEXP, SEXP sScoreSEXP, SEXP sPeaksSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject __result;
+    Rcpp::RNGScope __rngScope;
+    Rcpp::traits::input_parameter< Rcpp::DataFrame >::type sMerged(sMergedSEXP);
+    Rcpp::traits::input_parameter< Rcpp::NumericVector >::type sScore(sScoreSEXP);
+    Rcpp::traits::input_parameter< Rcpp::DataFrame >::type sPeaks(sPeaksSEXP);
+    __result = Rcpp::wrap(mergeScores(sMerged, sScore, sPeaks));
+    return __result;
+END_RCPP
+}
 // peakOrder
 Rcpp::RObject peakOrder(SEXP schrom, SEXP sleft, SEXP sright);
 RcppExport SEXP DiffBind_peakOrder(SEXP schromSEXP, SEXP sleftSEXP, SEXP srightSEXP) {
